NOT TESTED: refactor: code improving and simplifying