@@ -2,13 +2,18 @@ package com.ostapchuk.car.rent.entity;
 
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
+import java.util.Collections;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import static com.ostapchuk.car.rent.entity.Permission.USERS_DELETE;
+import static com.ostapchuk.car.rent.entity.Permission.USERS_READ;
+import static com.ostapchuk.car.rent.entity.Permission.USERS_WRITE;
+
 public enum Role {
 
-    USER(Set.of(Permission.USERS_READ)),
-    ADMIN(Set.of(Permission.USERS_READ, Permission.USERS_WRITE, Permission.USERS_DELETE));
+    USER(Collections.singleton(USERS_READ)),
+    ADMIN(Set.of(USERS_READ, USERS_WRITE, USERS_DELETE));
 
     private final Set<Permission> permissions;
 
@@ -22,7 +27,7 @@ public enum Role {
 
     public Set<SimpleGrantedAuthority> getAuthorities() {
         return getPermissions().stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .map(permission -> new SimpleGrantedAuthority(permission.getName()))
                 .collect(Collectors.toSet());
     }
 }
